@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-10T01:16:51Z",
-  "count" : 221,
-  "count_minmax" : [ 0, 221 ],
-  "count_prev_day_inc" : 8,
-  "count_prev_day_dec" : 0,
-  "uniques" : 2,
-  "uniques_minmax" : [ 0, 2 ],
-  "uniques_prev_day_inc" : 5,
-  "uniques_prev_day_dec" : 0
+  "timestamp" : "2022-05-23T16:26:41Z",
+  "count" : 220,
+  "count_minmax" : [ 220, 221 ],
+  "count_decinc" : [ -1, +0 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +0 ]
 }
