@@ -1,11 +1,11 @@
 {
-  "count": 277,
+  "count": 276,
   "uniques": 20,
   "clones": [
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 221,
-      "uniques": 2
+      "count": 220,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
